make nav title also clickable link to about, enforce consistent vertical scrollbar to avoid a page jump (#1, #5)

--- a/app/styles/_chrome.scss
+++ b/app/styles/_chrome.scss
@@ -1,6 +1,7 @@
 
 body {
     background-color: #666;
+    overflow-y: scroll;
 
     &::-webkit-scrollbar {
         width: 16px;
